--- a/src/style/style.css
+++ b/src/style/style.css
@@ -12,6 +12,8 @@
 
   --font-color: black;
 
+  --light-yellow: yellow;
+
   --light-color-1: #e8e8e8;
 
   --light-color-2: #f7f5e6;
@@ -90,7 +92,7 @@
 }
 
 .input-field {
-  border: 1px solid #ff0084;
+  border: 1px solid var(--dark-color-1);
   border-radius: 8px;
   font-size: 1rem;
   margin: 15px 0;
@@ -99,9 +101,9 @@
 }
 
 .button-login {
-  background-color: #33001b;
+  background-color: var(--dark-color-2);
   border-radius: 8px;
-  color: #ff0084;
+  color: var(--light-color-1);
   cursor: pointer;
   font-size: 1rem;
   padding: 15px 10px;
@@ -109,11 +111,12 @@
 }
 
 .button-login:hover {
-  color: white;
+  color: var(--light-yellow);
 }
 
 .button-login:disabled {
   background-color: #ddd;
+  color: var(--dark-color-1);
   cursor: auto;
 }
 
