--- a/src/style/style.css
+++ b/src/style/style.css
@@ -22,6 +22,9 @@
 
   --dark-color-2: #333a56;
 
+  --cancel: #f23b1c;
+
+
   --background-gradient: linear-gradient(45deg, #333a56, #52658f);
 }
 
@@ -180,6 +183,19 @@
 }
 
 .form-task-button-edit-expense:hover {
+  color: var(--light-yellow);
+}
+
+.form-task-button-cancel-expense {
+  background-color: var(--cancel);
+  color: var(--light-color-1);
+  cursor: pointer;
+  font-size: 0.9rem;
+  font-weight: 700;
+  padding: 10px;
+}
+
+.form-task-button-cancel-expense:hover {
   color: var(--light-yellow);
 }
 
