--- a/src/style/style.css
+++ b/src/style/style.css
@@ -35,9 +35,9 @@
   display: flex;
   flex-direction: row;
   font-style: italic;
-  height: 15vh;
+  height: 75px;
   justify-content: space-between;
-  width: 100vw;
+  width: 100%;
 }
 
 .header h1 {
